# DreamHouse

./: .env  .gitignore  Makefile  TODO  pyproject.toml
apps/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/migrations/: 0001_initial.py
apps/models/: __init__.py  property.py  users.py
root/: settings.py  urls.py
